# Mental-Wellbeing

./: .gitignore  README.md  eg.txt  pyproject.toml  requirements.txt  run_api.py  run_dashboard.py  run_train.py
data/processed/: training_metrics.json
notebooks/: README.md
reports/: PROJECT_REPORT_OUTLINE.md
src/mental_wellbeing/: __init__.py  config.py  data.py  explain.py  features.py  predict.py  train.py
src/mental_wellbeing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mental_wellbeing/web/: api.py  dashboard.py
tests/: test_data_cleaning.py
