[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mental-wellbeing"
version = "0.1.0"
description = "Student mental wellbeing prediction and dashboard project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "streamlit>=1.36",
  "flask>=3.0",
  "plotly>=5.22"
]

[tool.setuptools.packages.find]
where = ["src"]
